# Holonet

./: .gitignore  README.md  main.py  pyproject.toml
Program_Ingest/: Holonet Root.txt  OriginCode.txt  benchmark_retrieval.py  domain_detection.py  ingest.py  shared.py  verify_fix.py
temp/: NIST_SP_800-61r3_ReadVox_Master.txt
